Linked Pages/Made Loop

--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -22,6 +22,6 @@
 
         <button type="submit">Add Game</button><br></br>
     </form>
-    <a href="/games/new">Back to list</a>
+    <button><a href="/games/">Back to Index</a></button>
 </body>
 </html>
